@@ -14,6 +14,7 @@
 
 - https://github.com/eclipse-syson/syson/issues/694[#694] [diagrams] Add a new custom node note among possible node style descriptions.
 - https://github.com/eclipse-syson/syson/issues/695[#695] [diagrams] Add Documentation element as graphical node
+- https://github.com/eclipse-syson/syson/issues/731[#731] [explorer] Allow creation of Comment from the Explorer view
 
 
 == v2024.9.0
